FormGroup y FormControl ahora gestionan el estado de los formularios, reemplazando [(ngModel)]. El método reset() limpia el formulario después de guardar o actualizar un producto. Cada campo del formulario está vinculado a un control dentro de FormGroup.

--- a/src/app/stock/stock-honey/stock-honey.component.html
+++ b/src/app/stock/stock-honey/stock-honey.component.html
@@ -58,26 +58,23 @@
                         <div class="cart-item-actions">
                             <div class="flex-container-col">
                                 <label>{{'Item.Name'| translate}} </label>
-                                <input type="text" class="input"
-                                        [(ngModel)]="product.name" name="productName">
+                                <input type="text" class="input" [(ngModel)]="product.name" name="productName">
                             </div>
 
                             <div class="flex-container-col">
                                 <label>{{'Item.Description'| translate}} </label>
-                                <input type="text" class="input"
-                                        [(ngModel)]="product.description" name="productDescription">
+                                <input type="text" class="input" [(ngModel)]="product.description"
+                                    name="productDescription">
                             </div>
 
                             <div class="flex-container-col">
                                 <label>{{'Item.Stock'| translate}} </label>
-                                <input type="number" class="input"
-                                        [(ngModel)]="product.stock" name="productStock">
+                                <input type="number" class="input" [(ngModel)]="product.stock" name="productStock">
                             </div>
 
                             <div class="flex-container-col">
                                 <label>{{'City'| translate}} </label>
-                                <input type="text" class="input"
-                                        [(ngModel)]="product.city" name="productCity">
+                                <input type="text" class="input" [(ngModel)]="product.city" name="productCity">
                             </div>
 
                         </div>
@@ -103,13 +100,13 @@
                             <div class="flex-container-col">
                                 <label>{{'cart.CartItems.Price'|translate}}</label>
                                 <input type="number" class="input" [(ngModel)]="product.selectedPrice"
-                                name="productPrice">
+                                    name="productPrice">
                             </div>
 
                             <div class="flex-container-col">
                                 <label>{{'Item.DTO'|translate}} </label>
                                 <input type="number" class="input" [(ngModel)]="product.selectedDto"
-                                name="productDiscount">
+                                    name="productDiscount">
                             </div>
 
                         </div>
@@ -123,17 +120,17 @@
         </div>
     </div>
 
-    <button class="primary" (click)="addProduct()">{{'Action.AddProduct'|translate}}</button>
+    <button class="primary floating-btn" (click)="addProduct()">{{'Action.AddProduct'|translate}}</button>
 
     <div class="cart-list" *ngIf="showAddProductForm">
         <h3>Añadir Nuevo Producto</h3>
         <div class="flex-col cart-box">
 
-            <form>
+            <!-- <form>
                 <div class="flex-container">
                     <div class="product-card">
                         <div class="product-image">
-                            <img src="./assets/img/{{newProduct.image}}" alt="Exterior photo of {{newProduct.name}}">
+                            <img src="" alt="Exterior photo of">
                             <div class="titleCard">{{'Action.UploadImage'|translate}}</div>
                             <div class="overlay"></div>
                         </div>
@@ -149,7 +146,7 @@
                                 <div class="form-inline-select  flex-container-col">
                                     <label for="typeSelector">{{'Item.Type'|translate}} </label>
                                     <div class="custom-select-wrapper">
-                                        <select id="typeSelector" [(ngModel)]="newProduct.type"
+                                        <select id="typeSelector"  formControlName="type"
                                             class="form-control custom-select" name="productType">
                                             <option value="HN">{{'Honey'|translate}}</option>
                                             <option value="MT">{{'Material.Title'| translate}}</option>
@@ -163,7 +160,7 @@
                                 <div class="form-inline-select  flex-container-col">
                                     <label for="stateSelector">{{'Item.State'|translate}} </label>
                                     <div class="custom-select-wrapper">
-                                        <select id="stateSelector" [(ngModel)]="newProduct.state"
+                                        <select id="stateSelector"  formControlName="state"
                                             class="form-control custom-select" name="productState">
                                             <option value="NO">{{'Item.NotAvailable'|translate}}</option>
                                             <option value="SI">{{'Item.Available'|translate}}</option>
@@ -174,7 +171,7 @@
                                 <div class="form-inline-select  flex-container-col">
                                     <label for="categorySelector">{{'Item.Category'|translate}} </label>
                                     <div class="custom-select-wrapper">
-                                        <select id="categorySelector" [(ngModel)]="newProduct.category"
+                                        <select id="categorySelector"  formControlName="category"
                                             class="form-control custom-select" name="productCategory">
                                             <option value="HN">{{'BenificesHerbalHoney.Title'| translate}}</option>
                                             <option value="HX">{{'BenificesHerbalHoney.Title'| translate}}</option>
@@ -195,13 +192,13 @@
 
 
                                 <label>{{'Item.Name'|translate}} <input type="text" class="input"
-                                        [(ngModel)]="newProduct.name" name="productName"></label>
+                                         formControlName="name" name="productName"></label>
                                 <label>{{'Item.Description'|translate}} <input type="text" class="input"
-                                        [(ngModel)]="newProduct.description" name="productDescription"></label>
+                                         formControlName="description" name="productDescription"></label>
                                 <label>{{'Item.Stock'|translate}} <input type="number" class="input"
-                                        [(ngModel)]="newProduct.stock" name="productStock"></label>
+                                         formControlName="stock" name="productStock"></label>
                                 <label>{{'City'|translate}} <input type="text" class="input"
-                                        [(ngModel)]="newProduct.city" name="productCity"></label>
+                                         formControlName="city" name="productCity"></label>
                             </div>
                         </div>
 
@@ -211,12 +208,12 @@
                                 <div class="flex-container-col">
                                     <div class="flex-container-col">
                                         <label>{{'cart.CartItems.Price'|translate}} 1000g </label>
-                                        <input type="number" class="input" [(ngModel)]="newProduct.prices['1000']"
+                                        <input type="number" class="input"  formControlName="prices['1000']"
                                             name="price1000">
                                     </div>
                                     <div class="flex-container-col">
                                         <label>{{'Item.DTO'|translate}} 1000g </label>
-                                        <input type="number" class="input" [(ngModel)]="newProduct.discounts['1000']"
+                                        <input type="number" class="input"  formControlName="discounts['1000']"
                                             name="DTO1000">
                                     </div>
 
@@ -225,13 +222,13 @@
                                 <div class="flex-container-col">
                                     <div class="flex-container-col">
                                         <label>{{'cart.CartItems.Price'|translate}} 500g </label>
-                                        <input type="number" class="input" [(ngModel)]="newProduct.prices['500']"
+                                        <input type="number" class="input"  formControlName="prices['500']"
                                             name="price500">
                                     </div>
 
                                     <div class="flex-container-col">
                                         <label>{{'Item.DTO'|translate}} 500g </label>
-                                        <input type="number" class="input" [(ngModel)]="newProduct.discounts['500']"
+                                        <input type="number" class="input"  formControlName="discounts['500']"
                                             name="DTO500">
                                     </div>
 
@@ -239,12 +236,12 @@
                                 <div class="flex-container-col">
                                     <div class="flex-container-col">
                                         <label>{{'cart.CartItems.Price'|translate}} 250g </label>
-                                        <input type="number" class="input" [(ngModel)]="newProduct.prices['250']"
+                                        <input type="number" class="input"  formControlName="prices['250']"
                                             name="price250">
                                     </div>
                                     <div class="flex-container-col">
                                         <label>{{'Item.DTO'|translate}}250g</label>
-                                        <input type="number" class="input" [(ngModel)]="newProduct.discounts['250']"
+                                        <input type="number" class="input"  formControlName="discounts['250']"
                                             name="DTO250">
                                     </div>
                                 </div>
@@ -253,9 +250,125 @@
                         </div>
                     </div>
                 </div>
-                <!-- <button type="button" class="button_main" (click)="saveNewProduct()">Añadir</button> -->
-                <button type="button" class="button_main" (click)="saveProduct()">{{'Action.Add'|translate}}</button>
+
+                <button type="submit" class="button_main">{{'Action.Add'|translate}}</button>
+            </form> -->
+
+
+            <form [formGroup]="productForm" (ngSubmit)="saveNewProduct()">
+
+                <div class="flex-container">
+                    <div class="product-card">
+                        <div class="product-image">
+                            <img src="" alt="Exterior photo of">
+                            <div class="titleCard">{{'Action.UploadImage'|translate}}</div>
+                            <div class="overlay"></div>
+                        </div>
+                        <div class="product-info">
+                            <p>{{'Action.UploadImage'|translate}}</p>
+
+                            <app-upload-img (imageUploaded)="onImageUploaded($event)"></app-upload-img>
+                        </div>
+                    </div>
+
+                    <div class="flex-col">
+                        <div class="cart-item">
+                            <div class="cart-item-actions">
+
+                                <div class="form-inline-select  flex-container-col">
+                                    <div class="custom-select-wrapper">
+                                        <label for="typeSelector">{{'Item.Type'|translate}} </label>
+                                        <select id="typeSelector" formControlName="type"
+                                            class="form-control custom-select" name="type">
+                                            <option value="HN">{{'Honey'|translate}}</option>
+                                            <option value="MT">{{'Material.Title'|translate}}</option>
+                                            <option value="CC">{{'Cours.Title'|translate}}</option>
+                                        </select>
+
+                                    </div>
+                                </div>
+
+                                <div class="form-inline-select  flex-container-col">
+                                    <div class="custom-select-wrapper">
+                                        <label for="categorySelector">{{'Item.Category'|translate}} </label>
+                                        <select id="categorySelector" formControlName="category"
+                                            class="form-control custom-select" name="category">
+                                            <option value="HN">{{'BenificesHerbalHoney.Title'|translate}}</option>
+                                            <option value="HN">{{'BenificesHerbalHoney.Title'| translate}}</option>
+                                            <option value="HX">{{'BenificesHerbalHoney.Title'| translate}}</option>
+                                            <option value="HY">{{'BenificesHerbalHoney.Title'| translate}}</option>
+                                            <option value="HA">{{'BenificesHerbalHoney.Title'| translate}}</option>
+                                            <option value="HB">{{'BenificesHerbalHoney.Title'| translate}}</option>
+                                        </select>
+
+                                    </div>
+                                </div>
+
+                                <div class="form-inline-select  flex-container-col">
+                                    <div class="custom-select-wrapper">
+                                        <label for="stateSelector">{{'Item.State'|translate}} </label>
+                                        <select id="stateSelector" formControlName="state"
+                                            class="form-control custom-select" name="state">
+                                            <option value="NO">{{'Item.NotAvailable'|translate}}</option>
+                                            <option value="SI">{{'Item.Available'|translate}}</option>
+                                        </select>
+
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="cart-item">
+                            <div class="cart-item-actions">
+                                <label>{{'Item.Name'|translate}} <input type="text" formControlName="name"></label>
+
+                                <label>{{'Item.Description'|translate}} <input type="text"
+                                        formControlName="description"></label>
+
+                                <label>{{'Item.Stock'|translate}} <input type="number" formControlName="stock"></label>
+
+                                <label>{{'City'|translate}} <input type="text" formControlName="city"></label>
+                            </div>
+                        </div>
+
+                        <div class="cart-item">
+                            <div class="cart-item-actions">
+                                <div formGroupName="prices" class="flex-col">
+                                    <label>Precio 1000g <input type="number" formControlName="1000"></label>
+                                    <label>Precio 500g <input type="number" formControlName="500"></label>
+                                    <label>Precio 250g <input type="number" formControlName="250"></label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="cart-item">
+                            <div class="cart-item-actions">
+                                <div formGroupName="discounts">
+                                    <label>Descuento 1000g <input type="number" formControlName="1000"></label>
+                                    <label>Descuento 500g <input type="number" formControlName="500"></label>
+                                    <label>Descuento 250g <input type="number" formControlName="250"></label>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+
+
+
+
+
+
+
+
+
+
+
+                </div>
+
+
+
+                <button type="submit" class="button_main">{{'Action.Add'|translate}}</button>
             </form>
+
         </div>
 
     </div>
