--- a/src/assets/css/button-styles.css
+++ b/src/assets/css/button-styles.css
@@ -132,3 +132,16 @@
   transform: scale(0.95);
   transition-duration: .5s;
 }
+
+.floating-btn {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  z-index: 1000;
+  background-color: #007bff; /* Ajusta los colores según tus necesidades */
+  color: white;
+  padding: 10px 20px;
+  border-radius: 50px;
+  cursor: pointer;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
